--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 port=8080
+spring.data.mongodb.uri=mongodb+srv://datp62661:Datp62661@mogoservice.xzz2jci.mongodb.net/?retryWrites=true&w=majority&appName=mogoService
+spring.data.mongodb.database=food_order_app_db
